# oasis

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE-MIT  README.md  README_cn.md  build.js  build.py  version.txt
.github/workflows/: build_release.yml
archive/: PdfViewer.svelte  README.md
archive/backend/: babel.config.cjs  package.json
archive/backend/lib/: crud.js
archive/backend/rocket/: Cargo.toml
archive/backend/rocket/src/: main.rs  partial.rs
archive/v1/: README.md
backend/: .env  .env-release  .gitignore  Cargo.toml  Rocket.toml  a.txt  index.html  package-lock.json  package.json
backend/assets/: init-sqlite.sql  init.sql  oasis.conf  oasis.conf.sample
backend/assets/migration/: 1_site.sql
backend/assets/migrations/: 20210829_init_db.sql  20211224_guest_login.sql  20220106_reset_password.sql
backend/assets/sql/: init.sql
backend/assets/tests/: 01.srt
backend/assets/tests/tls/: rsa_sha256_cert.pem  rsa_sha256_key.pem
backend/migrations/: 20210816_init_db.sql  20210829_init_db.sql
backend/resources/tests/: 01.srt
backend/src/: api.rs  auth.rs  crud.js  db.rs  entity.rs  filesystem.rs  index.js  index.ts  init.js  init.ts  main.rs  route.rs  server.rs  util.rs  utils.rs
backend/src/api/: file.rs  files.rs  login.rs  mod.rs  setup.rs  site.rs  sys.rs  upload.rs  user.rs
backend/src/entity/: app.rs  app_state.rs  auth.rs  copy_move_task.rs  file.rs  hidden.rs  mod.rs  query.rs  range.rs  request.rs  reset_password.rs  response.rs  site.rs  state.rs  token.rs  upload.rs  upload_task.rs  user.rs
backend/src/request/: file.rs  site.rs  sys.rs  upload.rs  user.rs
backend/src/service/: app_state.rs  auth.rs  db.rs  error.rs  fairings.rs  middleware.rs  migrate_dir.rs  mod.rs  range.rs  route.rs  static_route.rs  token.rs  track.rs
backend/src/util/: constants.rs  custom_error.rs  db.rs  env.rs  file_system.rs  filesystem.rs  init.rs  local_ip.rs  middleware.rs  mod.rs  rocket_env.rs
doc/: db.md  setup.md
docker/: Dockerfile
docs/: db.md  setup.md  sql.md
frontend/: .gitignore  .prettierrc  nodemon.json  package-lock.json  package.json  rollup.config.js  snowpack.config.js  tailwind.config.js  tsconfig.json
frontend/public/: global.css  home.html  index.html  md5.min.js  upload.js
frontend/scss/: index.scss
frontend/src/: App.svelte  context.tsx  home.jsx  i18n.js  index.jsx  index.tsx  init.js  login.tsx  main.ts  setup.jsx  setup.tsx
setup/: package-lock.json
setup/src/: App.tsx  index.css
(+239 files in other folders)
