[package]
name = "oasis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
anyhow = "1.0"
async-std = { version = "1.8.0", features = ["attributes"] }
bcrypt = "0.10"
chrono = "0.4"
dirs = "3.0"
dotenv = "0.15.0"
jsonwebtoken = "7"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }
time = "0.2.11"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }