[package]
name = "oasis"
version = "0.1.0"
authors = ["Cheng <machengiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
anyhow = "1.0"
chardetng = "0.1.14"
chrono = "0.4"
bcrypt = "0.10"
encoding_rs = "0.8.28"
include_dir = "0.6.2"
jsonwebtoken = "7"
rand = "0.8.4"
regex = "1.0"
sha2 = "0.9.8"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
sysinfo = "0.20"
tokio = { version = "1.10.1", features = ["full"] }
time = "0.2.11"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }