[package]
name = "backend"
version = "0.1.0"
authors = ["Cheng <machengiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0.125"
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3"